[Sett, Farzana] correcting overflow for entire site

--- a/src/sass/components/atoms/_navigation.scss
+++ b/src/sass/components/atoms/_navigation.scss
@@ -130,7 +130,6 @@
         
         .resting{
           transform: translateX(100%);
-          display:none;
         }
 
         .slideLeft{
